using UnityEngine;

public class Constant 
{
    //Anim for player
    public const string ANIM_IDLE = "idle";
    public const string ANIM_RUN = "run";
    public const string ANIM_CHARGEJUMP = "chargejump";
    public const string ANIM_FAIL = "fail";
    public const string ANIM_JUMPUP = "jumpup";
    public const string ANIM_FALLDOWN = "falldown";
    public const string ANIM_BOUNCELEFT = "bounceleft";
    public const string ANIM_BOUNCERIGHT = "bounceright";

    //Anim for raven
    public const string ANIM_RAVENIDLE = "idle";
    public const string ANIM_RAVENFLYUP = "flyup";

    //tag
    public const string TAG_PLAYER = "Player";
    public const string TAG_PRINCESS = "Princess";
}
